frontend/src/scss/quiz/_quiz-layout.scss
.lms-quiz {
  text-align: center;
  background: #fff;

  &__wrapper {
    max-width: 1300px;
    margin: auto;
    padding: 10px 30px;
    position: relative;

    //@media screen and (max-width: 991px) {
    //  padding: 5px 15px;
    //}

    &--small {
      max-width: 800px;
    }
  }

  &__title {
    margin-bottom: 0;
  }

  &__header {
    //padding-top: 40px;
    //padding-bottom: 20px;
    color: #000;

    .tooltip {
      z-index: 11;
    }

    .tooltip-inner {
      padding: 10px;
      background: #fff;
      color: #000 !important;
      border: 1px solid #000;
      box-shadow: 2px 4px rgba(0, 0, 0, 0.6);
      border-radius: 4px;
    }

    .tooltip-arrow {
      display: none;
      //position: absolute;
      //width: 0;
      //height: 0;
      //border-style: solid;
      //border-width: 0 10px 10px 10px;
      //border-color: transparent transparent #007bff transparent;
    }
  }

  &__hint {
    position: absolute;
    top: 4px;
    right: 120px;
    height: 60px;
    width: 60px;

    @media screen and (max-width: 991px) {
      right: 10px;
    }

    //@media screen and (max-width: 781px) {
    //  top: 30px;
    //}

    & + .tooltip {
      .tooltip-inner {
        max-width: 200px;
        margin-top: 10px;
      }
    }
  }

  &__question {
    background: rgb(73, 174, 226);
    color: #fff;

    h3 {
      color: #fff;
      //margin: 0;
    }
  }

  &-main {
    @media screen and (max-width: 1024px) {
      padding: 35px 0;
    }
  }

  &__check {
    float: right;
  }

  &-check-button {
    display: none;
  }
  &-passed {
    .lms-quiz-form {
      input[type="text"],
      textarea {
        border-color: #3c763d;
        border-width: 2px;
      }
    }
  }
}

